--- a/main/templates/main/admin/ordercompleted.html
+++ b/main/templates/main/admin/ordercompleted.html
@@ -33,56 +33,35 @@ List of Completed Order
                             <th class="text-center">Action</th>
                         </tr>
                     </thead>
-
+                    {% for tran in trans %}
                     <tbody>
                         <tr>
-                            <td>2023-09-28</td>
-                            <td>36215</td>
+                            <td>{{ tran.date_created }}</td>
+                            <td>{{ tran.transaction_id }}</td>
                             <td>
-                                <a href="{% static 'img/no-profile.png' %}">
-                                    <img width="50" src="{% static 'img/no-profile.png' %}">
+                                <a href="{{ tran.user.personinfo.image.url }}">
+                                    <img width="50" src="{{ tran.user.personinfo.image.url }}">
                                 </a>
                             </td>
-                            <td>Customer Nname</td>
-                            <td>Dine-In</td>
-                            <td class="text-success">Completed</td>
-                            <td>1000</td>
+                            <td>{{ tran.user.first_name | title }} {{ tran.user.last_name | title }}</td>
+                            <td>{{ tran.order_mode }}</td>
+                            <td class="text-success">{{ tran.status }}</td>
+                            <td>{{ tran.total_amount }}</td>
                             <td class="text-center">
-                                <a class="btn btn-sm btn-info text-white" data-bs-toggle="modal" id=""
-                                   data-bs-target="#viewModal">
+                                <a class="btn btn-sm btn-info text-white"
+                                   href="{% url 'admin_customer_orderlist_completed' tran.transaction_id %}">
                                     <i data-feather="eye"></i>
                                 </a>
                             </td>
                         </tr>
                     </tbody>
+                    {% endfor %}
                 </table>
             </div>
         </div>
     </div>
 </div>
 
-<!-- Modal -->
-<div class="modal fade" id="caModal">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <form action="" method="post" id="ca_frm">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Canceling...?</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <input name="id" type="hidden">
-                    <p>Are you sure you want to cancel this data?</p>
-                    <input type="text" class="form-control" placeholder="Your Reason" required>
-                </div>
-                <div class="modal-footer float-end">
-                    <button type="submit" class="btn btn-dark">Yes</button>
-                    <a class="btn btn-cancel" data-bs-dismiss="modal" aria-label="Close">Cancel</a>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
 {% endblock %}
 {% block javascripts %}
 <script>
