--- a/main/templates/main/customer/completedorder.html
+++ b/main/templates/main/customer/completedorder.html
@@ -105,19 +105,22 @@
 								<th class="text-center">Action</th>
 							</tr>
 						</thead>
+						{% for tran in trans %}
 						<tbody>
 							<tr>
-								<td>2023091012</td>
-								<td>Delivery</td>
-								<td class="text-success">Completed</td>
-								<td>200</td>
+								<td>{{ tran.transaction_id }}</td>
+								<td>{{ tran.order_mode }}</td>
+								<td class="text-success">{{ tran.status }}</td>
+								<td>{{ tran.total_amount }}</td>
 								<td class="text-center">
-									<a class="btn btn-sm btn-info" href="{% url 'customer_view_rate_order' %}">
+									<a class="btn btn-sm btn-info"
+									   href="{% url 'customer_view_rate_order' tran.transaction_id %}">
 										<i data-feather="eye"></i>
 									</a>
 								</td>
 							</tr>
 						</tbody>
+						{% endfor %}
 					</table>
 				</div>
 			</div>
