--- a/main/templates/main/customer/inprocessorder.html
+++ b/main/templates/main/customer/inprocessorder.html
@@ -12,9 +12,12 @@
 <div class="container">
 	<div class="col-12 mx-auto col-md-10">
 		<div class="d-flex justify-content-around bd-highlight">
-			<div class="p-2 bd-highlight"><a href="{% url 'customer_pending_order' %}" class="btn btn-primary p-2"><i class="fa fa-clock"></i><br> Pending</a></div>
-			<div class="p-2 bd-highlight"><a href="{% url 'customer_process_order' %}" class="btn btn-warning p-2"><i class="fa fa-spinner"></i><br> In-process</a></div>
-			<div class="p-2 bd-highlight"><a href="{% url 'customer_completed_order' %}" class="btn btn-primary p-2"><i class="fa fa-check-circle"></i><br> Completed</a></div>
+			<div class="p-2 bd-highlight"><a href="{% url 'customer_pending_order' %}" class="btn btn-primary p-2"><i
+					   class="fa fa-clock"></i><br> Pending</a></div>
+			<div class="p-2 bd-highlight"><a href="{% url 'customer_process_order' %}" class="btn btn-warning p-2"><i
+					   class="fa fa-spinner"></i><br> In-process</a></div>
+			<div class="p-2 bd-highlight"><a href="{% url 'customer_completed_order' %}" class="btn btn-primary p-2"><i
+					   class="fa fa-check-circle"></i><br> Completed</a></div>
 		</div>
 	</div>
 
@@ -39,19 +42,22 @@
 								<th class="text-center">Action</th>
 							</tr>
 						</thead>
+						{% for tran in trans %}
 						<tbody>
 							<tr>
-								<td>2023091012</td>
-								<td>Delivery</td>
-								<td class="text-info">In-Process</td>
-								<td>200</td>
+								<td>{{ tran.transaction_id }}</td>
+								<td>{{ tran.order_mode }}</td>
+								<td class="text-info">{{ tran.status }}</td>
+								<td>{{ tran.total_amount }}</td>
 								<td class="text-center">
-									<a class="btn btn-sm btn-info" href="">
+									<a class="btn btn-sm btn-info"
+									   href="{% url 'customer_orderlist_inprocess' tran.transaction_id %}">
 										<i data-feather="eye"></i>
 									</a>
 								</td>
 							</tr>
 						</tbody>
+						{% endfor %}
 					</table>
 				</div>
 			</div>
@@ -59,19 +65,19 @@
 	</div>
 </div>
 <div class="modal fade" id="viewModal">
-    <div class="modal-lg modal-dialog">
-        <div class="modal-content">
-            <form action="" method="post" id="view_frm">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Your Order</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="row">
-                        <div class="form-group">
-                            <label>Item Name</label>
-                            <input type="text" class="form-control" name="name" readonly>
-                        </div>
+	<div class="modal-lg modal-dialog">
+		<div class="modal-content">
+			<form action="" method="post" id="view_frm">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Your Order</h5>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<div class="row">
+						<div class="form-group">
+							<label>Item Name</label>
+							<input type="text" class="form-control" name="name" readonly>
+						</div>
 						<div class="col-md-6">
 							<div class="form-group">
 								<label>Quantity</label>
@@ -94,54 +100,54 @@
 								<input type="text" class="form-control" name="category" readonly>
 							</div>
 						</div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label>Order Mode</label>
-                                <input type="text" class="form-control" name="order_mode" readonly>
-                            </div>
-                        </div>
-						
+						<div class="col-md-6">
+							<div class="form-group">
+								<label>Order Mode</label>
+								<input type="text" class="form-control" name="order_mode" readonly>
+							</div>
+						</div>
+
 						<div class="form-group">
 							<label>Prep Time</label>
 							<input type="text" class="form-control" name="PrepTime" readonly>
 						</div>
-                    </div>
-                    <div class="form-group">
-                        <label>Description</label>
-                        <textarea name="description" id="description" cols="30" rows="10" readonly></textarea>
-                    </div>
-                </div>
-                <div class="modal-footer float-end">
-                    <a class="btn btn-cancel" data-bs-dismiss="modal" aria-label="Close">Close</a>
-                </div>
-            </form>
-        </div>
-    </div>
+					</div>
+					<div class="form-group">
+						<label>Description</label>
+						<textarea name="description" id="description" cols="30" rows="10" readonly></textarea>
+					</div>
+				</div>
+				<div class="modal-footer float-end">
+					<a class="btn btn-cancel" data-bs-dismiss="modal" aria-label="Close">Close</a>
+				</div>
+			</form>
+		</div>
+	</div>
 </div>
 
 {% endblock %}
 
 {% block javascripts %}
 <script>
-    $('#delModal').on('show.bs.modal', function (e) {
-        var opener = e.relatedTarget;
-        var id = $(opener).attr('id');
-        $('#delete_frm').find('[name="id"]').val(id);
-    });
-    $('#viewModal').on('show.bs.modal', function (e) {
-        var opener = e.relatedTarget;
-        var name = $(opener).attr('name');
-        var category = $(opener).attr('category');
-        var price = $(opener).attr('price');
-        var PrepTime = $(opener).attr('PrepTime');
-        var description = $(opener).attr('description');
-        var order_mode = $(opener).attr('order_mode');
-        $('#view_frm').find('[name="name"]').val(name);
-        $('#view_frm').find('[name="category"]').val(category);
-        $('#view_frm').find('[name="price"]').val(price);
-        $('#view_frm').find('[name="PrepTime"]').val(PrepTime);
-        $('#view_frm').find('[name="description"]').val(description);
-        $('#view_frm').find('[name="order_mode"]').val(order_mode);
-    });
+	$('#delModal').on('show.bs.modal', function (e) {
+		var opener = e.relatedTarget;
+		var id = $(opener).attr('id');
+		$('#delete_frm').find('[name="id"]').val(id);
+	});
+	$('#viewModal').on('show.bs.modal', function (e) {
+		var opener = e.relatedTarget;
+		var name = $(opener).attr('name');
+		var category = $(opener).attr('category');
+		var price = $(opener).attr('price');
+		var PrepTime = $(opener).attr('PrepTime');
+		var description = $(opener).attr('description');
+		var order_mode = $(opener).attr('order_mode');
+		$('#view_frm').find('[name="name"]').val(name);
+		$('#view_frm').find('[name="category"]').val(category);
+		$('#view_frm').find('[name="price"]').val(price);
+		$('#view_frm').find('[name="PrepTime"]').val(PrepTime);
+		$('#view_frm').find('[name="description"]').val(description);
+		$('#view_frm').find('[name="order_mode"]').val(order_mode);
+	});
 </script>
 {% endblock javascripts %}
