--- a/main/templates/main/pages/singleorder.html
+++ b/main/templates/main/pages/singleorder.html
@@ -21,17 +21,29 @@ List of Food
     <div class="header" style="margin-bottom: 40px;">
         <h2>Your Order</h2>
     </div>
-
+    <div class="row">
+        {% for message in messages %}
+        {% if message.tags == 'success' %}
+        <div class="alert alert-success" role="alert">
+            {{ message }}
+        </div>
+        {% elif message.tags == 'error' %}
+        <div class="alert alert-danger" role="alert">
+            {{ message }}
+        </div>
+        {% endif %}
+        {% endfor %}
+    </div>
     <div class="seller container2">
-        
+        {% for order in orders %}
         <div class="container-product">
             <div class="product-image" style="margin: 10px auto;">
-                <img src="{% static 'img/logo.jpg' %}" alt="img">
+                <img src="{{ order.product.image.url }}" alt="img">
             </div>
             <div class="product-details" style="align-self: center;">
                 <div class="product-header">
-                    <h3>Buttered Chicken</h3>
-                    <h1>120.00</h1>
+                    <h3>{{ order.product.name }}</h3>
+                    <h1>{{ order.product.price }}.00</h1>
                 </div>
                 <div class="cont-mo">
                     <div class="more-details">
@@ -44,14 +56,14 @@ List of Food
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>1</td>
-                                    <td>120.00</td>
+                                    <td>{{ order.quantity }}</td>
+                                    <td>{{ order.product.price }}.00</td>
                                 </tr>
                             </tbody>
                             <tfoot>
                                 <tr>
                                     <td>Total Amount:</td>
-                                    <td>120.00</td>
+                                    <td>{{ order.total_amount }}.00</td>
                                 </tr>
                             </tfoot>
                         </table>
@@ -59,7 +71,7 @@ List of Food
                 </div>
             </div>
         </div>
-       
+        {% endfor %}
         <form action="" method="POST">
             {% csrf_token %}
             <table class="order-table">
@@ -85,10 +97,11 @@ List of Food
                     </tr>
                 </tbody>
                 <tfoot>
-                    
+
                     <tr>
                         <td>Total Order:</td>
-                        <td>120.00</td>
+
+                        <td>{% for order in orders %}{{ order.total_amount }}.00{% endfor %}</td>
                     </tr>
                 </tfoot>
             </table>
@@ -106,7 +119,7 @@ List of Food
     const orderSelect = document.getElementById('order');
     const addressTr = document.getElementById('address_tr');
 
-    orderSelect.addEventListener('change', function() {
+    orderSelect.addEventListener('change', function () {
         if (orderSelect.value === 'Delivery') {
             addressTr.style.display = 'table-row';
         } else {
