--- a/main/templates/main/pages/singleorder.html
+++ b/main/templates/main/pages/singleorder.html
@@ -106,7 +106,7 @@ List of Food
                 </tfoot>
             </table>
             <div class="product-footer">
-                <a class="btn-back">Cancel</a>
+                <a class="btn-back" onclick="window.history.go(-1); return false;">Back</a>
                 <button class="btn-place-order" type="submit">Check Out</button>
             </div>
         </form>
