--- a/main/templates/main/admin/viewitemlist.html
+++ b/main/templates/main/admin/viewitemlist.html
@@ -99,11 +99,14 @@ View Customer's Order
 															   class="form-control" name="category" readonly>
 													</div>
 												</div>
-												<div class="form-group">
-													<label>Prep Time</label>
-													<input type="text" value="{{ order.product.PrepTime }}"
-														   class="form-control" name="PrepTime" readonly>
+												<div class="col-md-6">
+													<div class="form-group">
+														<label>Prep Time</label>
+														<input type="text" value="{{ order.product.PrepTime }}"
+															   class="form-control" name="PrepTime" readonly>
+													</div>
 												</div>
+												
 											</div>
 											<div class="form-group">
 												<label>Description</label>
@@ -121,6 +124,12 @@ View Customer's Order
 						</div>
 					</tbody>
 					{% endfor %}
+					<tr>
+						<td colspan="3"></td>
+                        <td colspan="2"><h4>Total Amount :</h4></td>
+                        <td><h4>₱ {{ total_amount }}</h4></td>
+						<td></td>
+                    </tr>
 				</table>
 			</div>
 		</div>
