--- a/main/templates/main/customer/viewitemlist.html
+++ b/main/templates/main/customer/viewitemlist.html
@@ -98,10 +98,12 @@
 															   value="{{ order.product.category }}" readonly>
 													</div>
 												</div>
-												<div class="form-group">
-													<label>Prep Time</label>
-													<input type="text" class="form-control" name="PrepTime"
-														   value="{{ order.product.PrepTime }}" readonly>
+												<div class="col-md-6">
+													<div class="form-group">
+														<label>Prep Time</label>
+														<input type="text" value="{{ order.product.PrepTime }}"
+															   class="form-control" name="PrepTime" readonly>
+													</div>
 												</div>
 											</div>
 											<div class="form-group">
@@ -120,6 +122,12 @@
 						</div>
 					</tbody>
 					{% endfor %}
+					<tr>
+						<td colspan="3"></td>
+                        <td colspan="2"><h4>Total Amount :</h4></td>
+                        <td><h4>₱ {{ total_amount }}</h4></td>
+						<td></td>
+                    </tr>
 				</table>
 			</div>
 		</div>
